0.16.0	UNRELEASED

 FEATURES
 
  * An Initialize dialog added to Olive along with a 'ginit' command
  (#90839, Szilveszter)
  
  * Tags support added: 'gtags' command and Branch->Tags menu entry in Olive
  (#103725, Szilveszter)

0.15.2	2007-04-03

 BUG FIXES

  * Fix regression that prevented gannotate from being used (#97473, 
                                                             Vincent, Jelmer)

  * Fix regression that prevented gstatus from being used (Jelmer)

  * Fix status dialog size (Jelmer)

 FEATURES

  * Update commit-notify to use new dbus API (Robert)

  * Display remote locations in commit-notify (Robert)

0.15.1	2007-03-25

 BUG FIXES
 
  * Prevent test suite from causing default-encoding changes (Aaron)
 
  * Fix testsuite when Olive was run before (Szilveszter)
 
  * Fix locking issue in Olive (Szilvester, #91522)

  * Don't obtain handle to networkmanager until necessary (Jelmer)

  * Better behavior in annotate when unable to go back (Aaron)

 FEATURES
 
  * Add very simple TortoiseBzr implementation (Wouter, Jelmer)

  * Add 'forward' button in gannotate (Aaron)

  * Add simple GTK+ progress bars (Jelmer)

  * Add gmissing command (Jelmer)

  * Add simple preferences window with plugin list and global settings
  (Jelmer)

  * Add new command 'commit-notify' to listen for commits on dbus and
  show them via pynotify. (Robert)

 UI IMPROVEMENTS

  * Move search fields in gannotate directly below source window (Aaron)

  * Move buttons to top, tweak layout (Aaron)

  * Strict commits are now a dialog, not a check box (Jelmer)

0.15.0	2007-03-09

BUG FIXES

  * Fix gannotate interaction with dirstate (Aaron)

  * Default button set on Commit dialog (#83030, Szilveszter)

  * Fix branch-nick handling (Aaron)

  * Defer cairo import to prevent import errors (Aaron)

  * More use of lazy_imports to speed up timing (Aaron)

  * Fix diff window freeze when shown from commit (Szilveszter)
